--- a/calonkaryawan/form/laboratorium.html
+++ b/calonkaryawan/form/laboratorium.html
@@ -91,7 +91,7 @@
                 </div>
            </div>
            <div class="form-group row">
-                   <label class="col-md-4 col-form-label" for="gds"><h5>Gula Darah Sewaktu</h5></label>
+                   <label class="col-md-4 col-form-label" for="gds">Gula Darah Sewaktu</label>
                    <div class="col-md-8">
                      <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
                    </div>
@@ -104,7 +104,7 @@
                 </div>
 
                  <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="urinalisa"><h5>Urinalisa</h5></label>
+                    <label class="col-md-4 col-form-label" for="urinalisa"><Urinalisa</label>
                     <div class="col-md-8">
                       <input id="urinalisa" name="urinalisa" type="text" placeholder="pH" class="form-control" required="">
                     </div>
