--- a/calonkaryawan/form/laboratorium.html
+++ b/calonkaryawan/form/laboratorium.html
@@ -96,15 +96,10 @@
                      <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
                    </div>
                  </div>
-                 <div class="form-group row">
-                  <label class="col-md-4 col-form-label" for="urinalisa"><h5>Imunoserologi</h5></label>
-                  <div class="col-md-8">
-                    <input id="imunoserologi" name="imunoserologi" type="text" placeholder="pH" class="form-control" required="">
-                  </div>
-                </div>
+                 <h5>Darah Lengkap</h5>
 
                  <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="urinalisa"><Urinalisa</label>
+                    <label class="col-md-4 col-form-label" for="urinalisa">Urinalisa</label>
                     <div class="col-md-8">
                       <input id="urinalisa" name="urinalisa" type="text" placeholder="pH" class="form-control" required="">
                     </div>
