--- a/kartap/form/anamnesa.html
+++ b/kartap/form/anamnesa.html
@@ -26,6 +26,8 @@
 <form class="form-horizontal" method="post" >
     <fieldset>
 
+      <legend></legend>
+
 
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="keluhan">Keluhan</label>
@@ -81,9 +83,69 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="olahraga">Olahraga</label>
   <div class="col-md-8">
-    <input id="olahraga" name="olahraga" type="text" placeholder="" class="form-control" required="">
+    <select id="olahraga" name="olahraga" class="form-control" required="">
+      <option value="jarang">Jarang</option>
+      <option value="sering">Sering</option>
+      <option value="rutin">Rutin</option>
+    </select>
   </div>
 </div>
+
+
+<div class="form-group row">
+  <label class="col-md-4 col-form-label" for="jenis_olahraga">Jenis Olahraga</label>
+  <div class="col-md-8">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" id="gym" name="jenis_olahraga" value="gym" required>
+      <label class="form-check-label" for="gym">GYM</label>
+    </div><br>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" id="futsal" name="jenis_olahraga" value="futsal" required>
+      <label class="form-check-label" for="futsal">Futsal</label>
+    </div><br>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" id="bulutangkis" name="jenis_olahraga" value="bulutangkis" required>
+      <label class="form-check-label" for="bulutangkis">Bulu Tangkis</label>
+    </div><br>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" id="other" name="jenis_olahraga" value="other" required>
+      <label class="form-check-label" for="other">Lainnya</label>
+    </div>
+    <input id="other_text" name="other_text" type="text" placeholder="Tulis jenis olahraga lain" class="form-control mt-2" style="display: none;">
+  </div>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var otherRadio = document.getElementById('other');
+    var otherText = document.getElementById('other_text');
+
+    otherRadio.addEventListener('change', function () {
+      if (otherRadio.checked) {
+        otherText.style.display = 'block';
+        otherText.required = true;
+      }
+    });
+
+    var radios = document.getElementsByName('jenis_olahraga');
+    radios.forEach(function (radio) {
+      if (radio !== otherRadio) {
+        radio.addEventListener('change', function () {
+          if (radio.checked) {
+            otherText.style.display = 'none';
+            otherText.required = false;
+            otherText.value = '';
+          }
+        });
+      }
+    });
+  });
+</script>
+
+
+
+
+
 
 
 <div class="form-group row">
