--- a/basic/form/costovertebra.html
+++ b/basic/form/costovertebra.html
@@ -38,7 +38,7 @@
 <div class="form-group row">
   <label class="col-md-4 col-form-label" for="jantung-auskultasi">Auskultasi Jantung</label>
   <div class="col-md-8">
-    <textarea id="jantung-auskultasi" name="Auskultasi Jantung" placeholder="" class="form-control" required="" rows="4"></textarea>
+    <textarea id="jantung-auskultasi" name="jantung-auskultasi" placeholder="" class="form-control" required="" rows="4"></textarea>
   </div>
 </div>
 
